--- a/css/styles.css
+++ b/css/styles.css
@@ -5,33 +5,14 @@ body{
     background: #F2F2F2;
 }
  
-/*
-.calc_container {
-    display: flex;
-    justify-content: center;
-    align-content: stretch;
-    
-	width: 236px;
-	height: 300px;
+
+.container {
+/*	width: 236px;*/
+/*	height: 300px;*/
     border: 1px solid #000;
 }
-*/
-.table {
-    border: 2px solid silver;
-/*    border-radius: 3px;*/
-/*    padding: 3px;*/
-/*    margin: 3px;*/
-    width: 176px;
-	height: 281px;
-    border-spacing: 3px;
-/*    background-color: #EEE; */
-}
 
-.table td {
-    padding: 2px;
-}
-
-.table textarea {
+textarea {
     resize:none;
     margin: 5px auto;
     margin-bottom: -13px;
@@ -49,4 +30,14 @@ body{
 
 .btnZero {
     width: 84px;
+}
+
+.col-3 {
+    padding: 3px 0px;
+}
+
+.row {
+    margin-right: -5px;
+    margin-left: -5px;
+
 }
