--- a/css/styles.css
+++ b/css/styles.css
@@ -10,6 +10,8 @@ body{
     border: 2px solid gray;
     border-radius: 10px;
     padding-top: 8px;
+    width: 224px;
+    height: 322px;
 }
 
 textarea {
